--- a/eth_train.ipynb
+++ b/eth_train.ipynb
@@ -2666,7 +2666,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bab46402",
+   "id": "e0909f6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2677,7 +2677,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1671ea66",
+   "id": "5df4a13c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2900,8 +2900,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "ab08d3dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 1 R2 Score:  0.7681394745568351\n",
+      "Model 2 R2 Score:  0.8663668871653294\n",
+      "Model 3 R2 Score:  0.9041971777215054\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Scores for each model\n",
+    "\n",
+    "print('Model 1 R2 Score: ', r2_score(y_test1, test_predictions))\n",
+    "print('Model 2 R2 Score: ', r2_score(y_test2, test_predictions2))\n",
+    "print('Model 3 R2 Score: ', r2_score(y_test2, test_predictions3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0813f630",
+   "id": "ab3bffdf",
    "metadata": {},
    "outputs": [],
    "source": []
