--- a/ltc_train.ipynb
+++ b/ltc_train.ipynb
@@ -2639,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "10600365",
+   "id": "9057df23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "09fe5a78",
+   "id": "98fca3c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2870,6 +2870,38 @@
     "#output original historical data to csv\n",
     "data.to_csv('output/ltc_lifetime.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b28aa54a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 1 R2 Score:  0.8631032843643147\n",
+      "Model 2 R2 Score:  0.8823143984655216\n",
+      "Model 3 R2 Score:  0.923962567643877\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Scores for each model\n",
+    "\n",
+    "print('Model 1 R2 Score: ', r2_score(y_test1, test_predictions))\n",
+    "print('Model 2 R2 Score: ', r2_score(y_test2, test_predictions2))\n",
+    "print('Model 3 R2 Score: ', r2_score(y_test2, test_predictions3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2784d22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
