--- a/btc_train.ipynb
+++ b/btc_train.ipynb
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b335ae77",
+   "id": "57d15a20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2878,7 +2878,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5b8e9ecc",
+   "id": "533361bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3100,6 +3100,38 @@
     "#output original historical data to csv\n",
     "data.to_csv('output/btc_lifetime.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "5f889c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 1 R2 Score:  0.9674967418989806\n",
+      "Model 2 R2 Score:  0.7657211595128824\n",
+      "Model 3 R2 Score:  0.8995809760577812\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Scores for each model\n",
+    "\n",
+    "print('Model 1 R2 Score: ', r2_score(y_test1, test_predictions))\n",
+    "print('Model 2 R2 Score: ', r2_score(y_test2, test_predictions2))\n",
+    "print('Model 3 R2 Score: ', r2_score(y_test2, test_predictions3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a451455f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
