format and comment updates

--- a/eth_train.ipynb
+++ b/eth_train.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "- This notebook attempts to use TensorFlow Keras LSTM to predict movement in Crypto prices\n",
     "- Data is pulled from the CoinApi, so it can be refreshed at any point and retrained\n",
+    "- The models use a 7 day lookback window to produce series data for training and testing\n",
     "- 2 optimizations were used and an overall R2 score of .90 was attained"
    ]
   },
@@ -2646,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "919eccd7",
+   "id": "44c8e065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2657,7 +2658,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "9b12daba",
+   "id": "178684ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2881,7 +2882,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "17162efc",
+   "id": "bfbeec1b",
    "metadata": {},
    "outputs": [
     {
@@ -2905,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c85abe07",
+   "id": "9428026e",
    "metadata": {},
    "outputs": [],
    "source": []
