--- a/btc_train-30_day.ipynb
+++ b/btc_train-30_day.ipynb
@@ -2811,7 +2811,7 @@
     "    #reshape batch\n",
     "    current_reshape = current_batch.reshape((1, 30, 1))\n",
     "\n",
-    "    \n",
+    "#add dates to last date in dataset for future predictions   \n",
     "for day in date_range:\n",
     "    new_date = initial_date + dt.timedelta(days=day)\n",
     "    predicted_dates.append(new_date\n",
