--- a/eth_train.ipynb
+++ b/eth_train.ipynb
@@ -65,7 +65,6 @@
     }
    ],
    "source": [
-    "#  https://docs.coinapi.io/market-data/rest-api/ohlcv\n",
     "# Pull ETH data from coinapi\n",
     "\n",
     "url = 'https://rest.coinapi.io/v1/ohlcv/BITSTAMP_SPOT_ETH_USD/history?period_id=1DAY&limit=20000'\n",
@@ -2518,12 +2517,13 @@
    "metadata": {},
    "source": [
     "## Future Prediction\n",
-    "- Attempting to look ahead x days in an attempt to predict upcoming trends"
+    "- Attempting to look ahead x days in an attempt to predict upcoming trends\n",
+    "- We are using the best scoring model for testing predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "2f8f2ce4",
    "metadata": {
     "scrolled": false
@@ -2533,13 +2533,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 40ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
       "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 39ms/step\n",
       "[7.397728, 7.396043, 7.396147, 7.396552, 7.396695, 7.3966675, 7.3966203]\n",
       "2023-09-18\n",
       "2023-09-19\n",
@@ -2556,7 +2556,6 @@
     "predictions = []\n",
     "predicted_dates = []\n",
     "prediction_range = 7\n",
-    "\n",
     "#create list of numbers to add to date based on date range\n",
     "date_range = list(range(1, prediction_range +1))\n",
     "\n",
@@ -2583,7 +2582,7 @@
     "    #reshape batch\n",
     "    current_reshape = current_batch.reshape((1, lookback, 1))\n",
     "\n",
-    "    \n",
+    "#Adding future dates at the end of the dateset   \n",
     "for day in date_range:\n",
     "    new_date = initial_date + dt.timedelta(days=day)\n",
     "    predicted_dates.append(new_date\n",
@@ -2597,17 +2596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "id": "ac867847",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f8fc3557c10>"
+       "<matplotlib.legend.Legend at 0x7f8fc35bb010>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2647,7 +2646,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "44c8e065",
+   "id": "521e80de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2658,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "178684ba",
+   "id": "7d66c065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2821,11 +2820,6 @@
     "                \"model_3_predicted\":np.exp(test_predictions3[-90:])})\n",
     "df.set_index('Date', inplace=True)\n",
     "\n",
-    "# df2 = pd.DataFrame({\"Date\": predicted_dates, \"future_prediction\":np.exp(predictions)})\n",
-    "# df2.set_index('Date', inplace=True)                   \n",
-    "                    \n",
-    "# past_future_df = pd.merge(df,df2, how='outer', left_index=True, right_index=True)\n",
-    "\n",
     "\n",
     "df"
    ]
@@ -2834,7 +2828,9 @@
    "cell_type": "code",
    "execution_count": 82,
    "id": "50058b64",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2882,7 +2878,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "bfbeec1b",
+   "id": "ae6cd1db",
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9428026e",
+   "id": "8a36ae61",
    "metadata": {},
    "outputs": [],
    "source": []
