--- a/model_deployment_eth.ipynb
+++ b/model_deployment_eth.ipynb
@@ -654,11 +654,11 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3fd9f584",
+   "id": "6b0b2222",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Flip lookback axis\n",
+    "#Flip lookback axis so that most recent day is last -7, -6, -5, -4, -3, -2, -1, predict next\n",
     "X = dc(np.flip(log_transformed_data, axis=1))"
    ]
   },
@@ -735,9 +735,7 @@
     "    #reshape batch\n",
     "    current_reshape = current_batch.reshape((1, 7, 1))\n",
     "\n",
-    "\n",
-    "    \n",
-    "    \n",
+    "#Add future dates for predictions   \n",
     "for day in date_range:\n",
     "    new_date = initial_date + dt.timedelta(days=day)\n",
     "    predicted_dates.append(new_date\n",
@@ -779,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6fca007a",
+   "id": "47192915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f3bbaa4c",
+   "id": "e5c04e5f",
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "986d6bb3",
+   "id": "b96cf67e",
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10577d0a",
+   "id": "9ddeb9f0",
    "metadata": {},
    "outputs": [],
    "source": []
