--- a/btc_train-30_day.ipynb
+++ b/btc_train-30_day.ipynb
@@ -67,8 +67,7 @@
     }
    ],
    "source": [
-    "#  https://docs.coinapi.io/market-data/rest-api/ohlcv\n",
-    "# Pull ETH data from coinapi\n",
+    "# Pull BTC data from coinapi\n",
     "\n",
     "url = 'https://rest.coinapi.io/v1/ohlcv/BITSTAMP_SPOT_BTC_USD/history?period_id=1DAY&limit=20000'\n",
     "headers = {'X-CoinAPI-Key' : coinapi_key}\n",
@@ -2751,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "2f8f2ce4",
    "metadata": {
     "scrolled": false
@@ -2761,13 +2760,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 42ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
       "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
       "[10.195582, 10.19651, 10.196365, 10.19618, 10.19605, 10.195949, 10.1958685]\n",
       "2023-09-19\n",
       "2023-09-20\n",
@@ -2825,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "ac867847",
    "metadata": {
     "scrolled": true
@@ -2834,10 +2833,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fae220d4e80>"
+       "<matplotlib.legend.Legend at 0x7fae22862aa0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3052,11 +3051,6 @@
     "                \"model_2_predicted\":np.exp(test_predictions2[-90:]),\\\n",
     "                \"model_3_predicted\":np.exp(test_predictions3[-90:])})\n",
     "df.set_index('Date', inplace=True)\n",
-    "\n",
-    "# df2 = pd.DataFrame({\"Date\": predicted_dates, \"future_prediction\":np.exp(predictions)})\n",
-    "# df2.set_index('Date', inplace=True)                   \n",
-    "                    \n",
-    "# past_future_df = pd.merge(df,df2, how='outer', left_index=True, right_index=True)\n",
     "\n",
     "\n",
     "df\n"
