--- a/model_deployment_btc_30_day.ipynb
+++ b/model_deployment_btc_30_day.ipynb
@@ -866,6 +866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Flip lookback axis so that most recent day is last -7, -6, -5, -4, -3, -2, -1, predict next\n",
     "X = dc(np.flip(log_transformed_data, axis=1))"
    ]
   },
@@ -942,7 +943,7 @@
     "    current_reshape = current_batch.reshape((1, 30, 1))\n",
     "\n",
     "    \n",
-    "    \n",
+    "#Add future dates for predictions  \n",
     "for day in date_range:\n",
     "    new_date = initial_date + dt.timedelta(days=day)\n",
     "    predicted_dates.append(new_date\n",
@@ -998,7 +999,6 @@
    ],
    "source": [
     "#build predictions for second 2 models\n",
-    "\n",
     "\n",
     "# Initialize an array to store predictions\n",
     "predictions2 = []\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "33626e70",
    "metadata": {
     "scrolled": true
