--- a/model_deployment_ltc_30_day.ipynb
+++ b/model_deployment_ltc_30_day.ipynb
@@ -865,7 +865,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Flip lookback axis\n",
+    "#Flip lookback axis so that most recent day is last -7, -6, -5, -4, -3, -2, -1, predict next\n",
     "X = dc(np.flip(log_transformed_data, axis=1))"
    ]
   },
@@ -944,7 +944,7 @@
     "    current_reshape = current_batch.reshape((1, 30, 1))\n",
     "\n",
     "    \n",
-    "    \n",
+    "#Add future dates to date range for predictions    \n",
     "for day in date_range:\n",
     "    new_date = initial_date + dt.timedelta(days=day)\n",
     "    predicted_dates.append(new_date\n",
@@ -1186,7 +1186,7 @@
     }
    ],
    "source": [
-    "# build output into a df for graphing in js\n",
+    "# build output into a df for graphing in js, use exp scaling to return data to original scale.\n",
     "\n",
     "df = pd.DataFrame({\"Date\": dates, \"observed\":close[lookback:]})\n",
     "df.set_index('Date', inplace=True)\n",
@@ -1388,8 +1388,7 @@
     }
    ],
    "source": [
-    "past_future_df.tail(14)\n",
-    "\n"
+    "past_future_df.tail(14)"
    ]
   },
   {
@@ -1566,6 +1565,8 @@
     }
    ],
    "source": [
+    "#find the mean of each row for the 3 sets of predictions\n",
+    "\n",
     "pred_columns = past_future_df[['future_prediction','future_prediction2','future_prediction3' ]]\n",
     "\n",
     "pred_means = pred_columns.mean(axis=1)\n",
